--- a/app/src/main/res/layout/file_chooser_activity.xml
+++ b/app/src/main/res/layout/file_chooser_activity.xml
@@ -19,50 +19,42 @@
             android:layout_width="268dp"
             android:layout_height="60dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="124dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="30dp"
             android:text="Existing Files"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/device"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.759" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/device"
+            android:id="@+id/help"
             android:layout_width="268dp"
             android:layout_height="60dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="44dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="380dp"
-            android:text="Upload and Print"
+            android:text="Help"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/firebase" />
+
+        <Button
+            android:id="@+id/firebase"
+            android:layout_width="268dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="8dp"
+            android:text="Firebase"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/octoprint" />
-
-        <Button
-            android:id="@+id/sdcard"
-            android:layout_width="268dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="348dp"
-            android:text="Firebase"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/device"
-            app:layout_constraintVertical_bias="0.8" />
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottomNavigationView"
@@ -77,7 +69,6 @@
 
 
     </android.support.constraint.ConstraintLayout>
-
 
 
 </LinearLayout>
